# blokus-python

./: .gitignore  LICENSE  Makefile  README.md  demo.py  pyproject.toml
docs/: Blokus Technical Document.md  Phase 1 Technical Document.md
src/core/: board.py  game.py  piece.py  player.py
src/utils/: constants.py  piece_data.py
tests/: test_board.py  test_game.py  test_piece.py  test_placement.py  test_player.py
