[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blokus"
version = "0.1.0"
description = "A Python implementation of the Blokus board game"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sason Reza" }]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "ruff>=0.0.262",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py312"
# select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
