[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blokus"
version = "0.1.0"
description = "A Python implementation of the Blokus board game"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sason Reza" }]
dependencies = ["numpy==2.2.3"]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "ruff==0.11.0",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
]

[tool.black]
line-length = 99
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 99

[tool.ruff]
line-length = 99
target-version = "py312"
# select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
